--- a/sass/global.scss
+++ b/sass/global.scss
@@ -11,5 +11,5 @@
 
 body {
 	background: url(../images/background.png);
-	padding: 0 $gutter;
+	padding: 0;
 }
